--- a/view/pom.xml
+++ b/view/pom.xml
@@ -36,7 +36,11 @@
             <artifactId>logic</artifactId>
             <version>1.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>6.2</version>
+        </dependency>
     </dependencies>
 
     <build>
